--- a/app/src/main/res/layout/order_placed_item_layout.xml
+++ b/app/src/main/res/layout/order_placed_item_layout.xml
@@ -14,7 +14,7 @@
         <com.haris.meal4u.TextviewUtil.NormalTextview
             android:id="@+id/txt_post_title"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
             android:text="Item"
