--- a/app/src/main/res/layout/activity_address.xml
+++ b/app/src/main/res/layout/activity_address.xml
@@ -1,104 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="20dp">
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
+    <com.haris.meal4u.TextviewUtil.NormalTextview
+        android:id="@+id/add_address_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/bg_call_to_action"
+        android:drawableStart="@drawable/plus_circle"
+        android:drawablePadding="5dp"
+        android:gravity="center"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:text="Add Address"
+        android:textColor="@color/white"
+        android:textSize="@dimen/normal_text_size" />
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/add_address_tv">
 
-        <com.haris.meal4u.EditTextUtil.NormalEditText
-            android:id="@+id/edit_building"
+        <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/bg_edit_text"
-            android:gravity="center_vertical"
-            android:hint="@string/building"
-            android:paddingStart="10dp"
-            android:textColor="?attr/colorPrimary"
-            android:textColorHint="?attr/colorTagline"
-            android:textSize="@dimen/tagline_text_size" />
-
-        <com.haris.meal4u.EditTextUtil.NormalEditText
-            android:id="@+id/edit_unit"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/bg_edit_text"
-            android:gravity="center_vertical"
-            android:hint="@string/floor_unit"
-            android:paddingStart="10dp"
-            android:textColor="?attr/colorPrimary"
-            android:textColorHint="?attr/colorTagline"
-            android:textSize="@dimen/tagline_text_size"
-            android:visibility="gone" />
-
-        <com.haris.meal4u.EditTextUtil.NormalEditText
-            android:id="@+id/edit_street_address"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/bg_edit_text"
-            android:gravity="top"
-            android:hint="@string/address"
-            android:paddingStart="10dp"
-            android:paddingTop="15dp"
-            android:textColor="?attr/colorPrimary"
-            android:textColorHint="?attr/colorTagline"
-            android:textSize="@dimen/tagline_text_size" />
-
-        <com.haris.meal4u.EditTextUtil.NormalEditText
-            android:id="@+id/edit_area"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@drawable/bg_edit_text"
-            android:gravity="center_vertical"
-            android:hint="@string/area"
-            android:paddingStart="10dp"
-            android:textColor="?attr/colorPrimary"
-            android:textColorHint="?attr/colorTagline"
-            android:textSize="@dimen/tagline_text_size" />
-
-        <com.haris.meal4u.EditTextUtil.NormalEditText
-            android:id="@+id/edit_comment"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/bg_edit_text"
-            android:gravity="top"
-            android:hint="@string/note_to_rider"
-            android:paddingStart="10dp"
-            android:paddingTop="15dp"
-            android:textColor="?attr/colorPrimary"
-            android:textColorHint="?attr/colorTagline"
-            android:textSize="@dimen/tagline_text_size"
-            android:visibility="gone" />
-
-        <com.haris.meal4u.TextviewUtil.NormalTextview
-            android:id="@+id/txt_confirm_checkout"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginStart="30dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="30dp"
-            android:background="@drawable/bg_call_to_action"
-            android:gravity="center"
-            android:text="@string/proceed_to_billing"
-            android:textColor="@color/white"
-            android:textSize="@dimen/normal_text_size" />
+            android:layout_marginBottom="20dp"
+            android:orientation="vertical">
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="40dp" />
+<!--            <View-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="40dp" />-->
 
-    </LinearLayout>
+        </LinearLayout>
+
+    </ScrollView>
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
 
 
-</ScrollView>
+</RelativeLayout>
