--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -142,6 +142,12 @@
         <item name="android:fontFamily">@font/ubunt_regular</item>
     </style>
 
+    <style name="RadioButtonStyleSecond" parent="AppTheme">
+        <item name="colorControlNormal">@color/text_color</item>
+        <item name="colorAccent">@color/colorPrimaryDark</item>
+        <item name="android:textColorSecondary">@color/text_color</item>
+    </style>
+
 
     <!-- Text Appearances -->
 
